<resources>
    <string name="app_name">Bottoms Up!</string>
    <string name="title_activity_select_categories">SelectCategoriesActivity</string>
    <string name="easy_difficulty">Getting Started</string>
    <string name="medium_difficulty">Livening up!</string>
    <string name="hard_difficulty">Getting crazy!!!</string>
    <string name="nameInputHint">Name…</string>
    <string name="playerListActivityTitle">Let\'s get started…</string>
    <string name="end_of__questions">That\'s all folks!</string>
    <string name="empty_name_error">Oops! You need to enter a name</string>
    <string name="name_already_added_error">Oops! That person has already been added</string>
    <string name="select_categories">Select categories!</string>
    <string name="categories_selected_button_text">Start Now!</string>
    <string name="challengeText">%1$s and %2$s take it in turns to %3$s. Loser has to drink %4$d times.</string>
    <string name="questionIndicator">Q%1$d of %2$d</string>
    <string name="saveDescription">%1$d Coins and %2$d Categories</string>
    <string name="end_of_questions_hint">Tap anywhere to go back</string>
    <string name="main_activity_tagline">The Drinking Game</string>
    <string name="players_confirmed_button_text">Next… choose categories</string>
    <string name="dataStorageKey">com.mishappstudios.bottomsup.datastorage</string>
    <string name="purchase_coins_title">Buy Coins!</string>
    <string name="app_id">1038462353462</string>
    <string name="google_sign_in_error">Something went wrong while trying to sign you in.</string>
    <string name="saves_dialog_title">Create a new save, or load an existing one.</string>
    <string name="rewarded_ad_hint">Free Coins?! Yup, watch a short ad and we\'ll top you up with 10 coins to spend on new unlocks!!</string>

</resources>
